--- a/plaintext/hosts_simple.yaml
+++ b/plaintext/hosts_simple.yaml
@@ -1,22 +1,22 @@
 zookeeper:
   hosts:
-    zk[1:3].nikoleta.aws.ps.confluent.io:
+    zk[1:3].rbac.nikoleta.aws.ps.confluent.io:
      
 kafka_broker:
   hosts:
-    kfk[1:3].nikoleta.aws.ps.confluent.io:
+    kfk[1:3].rbac.nikoleta.aws.ps.confluent.io:
     
 control_center:
   hosts:
-    ccc1.nikoleta.aws.ps.confluent.io:
+    ccc1.rbac.nikoleta.aws.ps.confluent.io:
        
 schema_registry:
   hosts:
-    sr1.nikoleta.aws.ps.confluent.io:
+    sr[1:2].rbac.nikoleta.aws.ps.confluent.io:
                   
 kafka_connect:
   hosts:
-    connect1.nikoleta.aws.ps.confluent.io:
+    connect[1:2].rbac.nikoleta.aws.ps.confluent.io:
                       
 ksql:
   hosts:
