Updates to ssupport 5.5

--- a/resources/group_vars/all/base.yml
+++ b/resources/group_vars/all/base.yml
@@ -14,7 +14,7 @@ jolokia_enabled: true #Disables Jolokia download/install
 jmxexporter_enabled: true #Enable to install Prometheus
 kafka_broker_configure_additional_brokers: false #This appears to be a regression in 5.5. We are defaulting to true now for some reason.
 kafka_broker_default_listeners: 
-  external:
+  internal:
     hostname: "{{inventory_hostname}}" #Set the Advertised Name
     
 ansible_become: true
